--- a/templates/app/taxi/taxi_admin.html
+++ b/templates/app/taxi/taxi_admin.html
@@ -25,12 +25,12 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 {% if page_obj.has_previous %}
-                    <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number}}">Previous</a>
+                    <a class="btn btn-outline-info mb-4" href="?page=1">Перша</a>
+                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number}}">Попередня</a>
                 {% endif %}
                 {% if page_obj.has_next %}
-                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
+                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Наступна</a>
+                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages}}">Остання</a>
                 {% endif %}
             </div>
         </div>
