--- a/templates/app/taxi/order.html
+++ b/templates/app/taxi/order.html
@@ -3,15 +3,18 @@
     <div class="container" style="margin-top: 20px">
         <div class="card" style="width: 18rem;">
           <div class="card-header">
-            {{ object.name }}
+            Ім'я замовника <strong>{{ object.name }}</strong>
           </div>
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">{{ object.phone }}</li>
-                <li class="list-group-item">{{ object.start_address }}</li>
-                <li class="list-group-item">{{ object.end_address }}</li>
-                <li class="list-group-item">{{ object.desire_time }}</li>
+                <li class="list-group-item">Номер телефону <strong>{{ object.phone }}</strong></li>
+                  <li class="list-group-item">Поточна адреса <strong>{{ object.start_address }}</strong></li>
+                <li class="list-group-item">Кінцева адреса <strong>{{ object.end_address }}</strong></li>
+                <li class="list-group-item">Час виклику авто <strong>{{ object.desire_time }}</strong></li>
+                <li class="list-group-item">Марка автомобіля <strong>{{ car.car_brand }}</strong></li>
               </ul>
         </div>
-        <a class="btn btn-success" href="{% url 'all_orders' %}" style="margin-top: 20px">Return to all orders</a>
+        <a class="btn btn-success" href="{% url 'all_orders' %}" style="margin-top: 20px">Повернутись до списку замовлень</a>
+        <a class="btn btn-danger" href="{% url 'delete' object.pk%}" style="margin-top: 20px">Зробити доступним авто/видалити замовлення</a>
+
     </div>
 {% endblock %}
